--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <h1 class="title">Bouncy Bob!</h1>
-    <p class="description">Bouncy Bob is a game where you have to help bob get home. Help bob by dodging obsticals and jumping around the platforms. Good luck!
+    <p class="description">Bouncy Bob is a game where you have to help bob get home. Help bob by dodging obstacles and jumping around the platforms. Good luck!\nHope you have fun!
     </p>
 
 
