--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
 
 
     <section class="grid">
-      <a href="https://replit.com/learn" class='card'>
+      <a href="https://itch.io/embed-upload/10366150?color=333333" class='card'>
         <h2>Play &rarr;</h2>
         <p>Itch.io web edition</p>
       </a>
+      <a href="https://brodep.itch.io/bouncybob" clas="card">
+        <h2>Play On Itch.io &rarr;</h2>
+        <p>Itch.io Website</p>
+      </a>
 
-      <a href="https://docs.replit.com/category/deployments" class='card'>
+      <a href="https://drive.google.com/drive/folders/1unj_mN3R9nbtL1jp05FSsIhsg-vgKPen?usp=sharing" class='card'>
         <h2>Download &rarr;</h2>
         <p>
           You can also download the game from google drive!</p>
@@ -33,10 +37,11 @@
     <section class="grid">
       <a class='card'>
         <p>Main Menu</p>
-        <img src="zeal.png" width="250">
+        <img src="MainMenu.png" width="250">
       </a>
       <a class='card'>
         <p>Gameplay</p>
+        <img scr="GamePlay" width="250">
       </a>
       <a class='card'>
         <p>Video</p>
