--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <h2>Play &rarr;</h2>
         <p>Itch.io web edition</p>
       </a>
-      <a href="https://brodep.itch.io/bouncybob" clas="card">
+
+      <a href="https://brodep.itch.io/bouncybob" class="card">
         <h2>Play On Itch.io &rarr;</h2>
         <p>Itch.io Website</p>
       </a>
@@ -38,11 +39,11 @@
     <section class="grid">
       <a class='card'>
         <p>Main Menu</p>
-        <img src="MainMenu.png" width="250">
+        <img src="MainMenu.png" width="500">
       </a>
       <a class='card'>
         <p>Gameplay</p>
-        <img scr="GamePlay" width="250">
+        <img scr="GamePlay" width="500">
       </a>
       <a class='card'>
         <p>Video</p>
