--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </a>
       <a class='card'>
         <p>Gameplay</p>
-        <img scr="GamePlay" width="500">
+        <img scr="GamePlay.png" width="500">
       </a>
       <a class='card'>
         <p>Video</p>
