--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <nav>
-  
+
 </nav>
+
 <body>
   <main>
     <h1 class="title">Bouncy Bob!</h1>
-    <p class="description">Bouncy Bob is a game where you have to help bob get home. Help bob by dodging obstacles and jumping around the platforms. Good luck!
+    <p class="description">Bouncy Bob is a game where you have to help bob get home. Help bob by dodging obstacles and
+      jumping around the platforms. Good luck!
       Hope you have fun!
     </p>
 
@@ -47,11 +49,13 @@
       </a>
       <a class='card'>
         <p>Video</p>
+        <a href="https://www.youtube.com">
+        </a>
       </a>
-     
+
     </section>
-    
-   
+
+
   </main>
 
   <script type="module" src="script.js"></script>
