--- a/index.html
+++ b/index.html
@@ -39,18 +39,16 @@
     </section>
     <p class="description">Some visuals of the game!</p>
     <section class="grid">
-      <a class='card'>
+      <a href='MainMenu.png' class='card'>
         <p>Main Menu</p>
         <img src="MainMenu.png" width="450">
       </a>
       <a class='card'>
         <p>Gameplay</p>
-        <img scr="GamePlay.png" width="450">
+        <img scr='GamePlay.png' width="450">
       </a>
-      <a class='card'>
-        <p>Video</p>
-        <a href="https://www.youtube.com">
-        </a>
+      <a href="https://www.youtube.com" class='card'>
+        <h2>Video &rarr</h2>
       </a>
 
     </section>
