--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <p>Main Menu</p>
         <img src="MainMenu.png" width="450">
       </a>
-      <a class='card'>
+      <a href='Game-Play.png'class='card'>
         <p>Gameplay</p>
-        <img scr='GamePlay.png' width="450">
+        <img scr="Game-Play.png" width="450">
       </a>
       <a href="https://www.youtube.com" class='card'>
-        <h2>Video &rarr</h2>
+        <h2>Video &rarr;</h2>
       </a>
 
     </section>
