--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main>
     <h1 class="title">Bouncy Bob!</h1>
-    <p class="description">Bouncy Bob is a game where you have to help bob get home. Help bob by dodging obstacles and
+    <p class="description">Bouncy Bob is a game where you have to help Bob get home. Help Bob by dodging obstacles and
       jumping around the platforms. Good luck!
       Hope you have fun!
     </p>
@@ -45,7 +45,7 @@
       </a>
       <a href='Game-Play.png'class='card'>
         <p>Gameplay</p>
-        <img scr="Game-Play.png" width="450">
+        <img src="MainMenu.png" width="450">
       </a>
       <a href="https://www.youtube.com" class='card'>
         <h2>Video &rarr;</h2>
