--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
       </a>
       <a href='Game-Play.png'class='card'>
         <p>Gameplay</p>
-        <img src="MainMenu.png" width="450">
+        <img src="Game-Play.png" width="450">
       </a>
+    </section>
+
+    <section class="grid">
       <a href="https://www.youtube.com" class='card'>
         <h2>Video &rarr;</h2>
       </a>
-
     </section>
-
 
   </main>
 
