added pitch doc

--- a/index.html
+++ b/index.html
@@ -50,8 +50,13 @@
     </section>
 
     <section class="grid">
-      <a href="https://www.youtube.com" class='card'>
+      <a href="https://www.youtube.com/watch?v=3ACkS-TZ20g" class='card'>
         <h2>Video &rarr;</h2>
+      </a>
+    </section>
+    <section class="grid">
+      <a href="pitch.html" class="card">
+        <h2>Pitch Doc &rarr;</h2>
       </a>
     </section>
 
