--- a/pitch.html
+++ b/pitch.html
@@ -13,9 +13,7 @@
 
 <body>
   <main>
-    <h2>
-        Bouncy Bob
-    </h2>
+    <h1 class="title">Bouncy Bob</h1>
         <p class="description">Some visuals of the game.</p>
         <section class="grid">
           <a href='MainMenu.png' class='card'>
@@ -29,6 +27,8 @@
           <a href="https://www.youtube.com/watch?v=3ACkS-TZ20g" class='card'>
             <h2>Video &rarr;</h2>
           </a>
+        </section>
+        <section class="grid">
           <a class="card">
             <p>
                 In Bouncy Bob you play as bob and have to help guide him home through jumps and spikes. This game is made to be able to be played on both Desktop and Mobile. 
