updated index pitch and style to add nav bar

--- a/index.html
+++ b/index.html
@@ -7,18 +7,28 @@
   <title>Bouncy Bob</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<nav>
-
+<header style="background-color:rgb(146, 191, 189);">
+  <h1 class="title">Bouncy Bob!</h1>
+</header>
+<nav style="background-color:rgb(146, 191, 189);">
+  
+  <a href="index.html" class="cardNav">
+    Home Page
+  </a>
+  <a href="pitch.html" class="cardNav">
+    Pitch Doc
+  </a>
+  <p></p>
+  <hr>
 </nav>
 
 <body>
   <main>
-    <h1 class="title">Bouncy Bob!</h1>
+    
     <p class="description">Bouncy Bob is a game where you have to help Bob get home. Help Bob by dodging obstacles and
       jumping around the platforms. Good luck!
       Hope you have fun!
     </p>
-
 
     <section class="grid">
       <a href="https://itch.io/embed-upload/10366150?color=333333" class='card'>
@@ -65,5 +75,10 @@
   <script type="module" src="script.js"></script>
 
 </body>
+<footer>
+  <p>
+    Made by Luna Chavez.
+  </p>
+</footer>
 
 </html>
