--- a/pitch.html
+++ b/pitch.html
@@ -7,8 +7,17 @@
   <title>Bouncy Bob</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+<header>
+  <h1 class="title">Bouncy Bob!</h1>
+    
+</header>
 <nav>
-
+  <a href="index.html" class="card">
+    Home Page
+  </a>
+  <a href="pitch.html" class="card">
+    Pitch Doc
+  </a>
 </nav>
 
 <body>
