--- a/pitch.html
+++ b/pitch.html
@@ -7,21 +7,24 @@
   <title>Bouncy Bob</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<header>
+<header style="background-color:rgb(146, 191, 189);">
   <h1 class="title">Bouncy Bob!</h1>
-    
 </header>
-<nav>
-  <a href="index.html" class="card">
+<nav style="background-color:rgb(146, 191, 189);">
+  
+  <a href="index.html" class="cardNav">
     Home Page
   </a>
-  <a href="pitch.html" class="card">
+  <a href="pitch.html" class="cardNav">
     Pitch Doc
   </a>
+  <p></p>
+  <hr>
 </nav>
 
 <body>
   <main>
+    <h2>Pitch Document</h2>
     <h1 class="title">Bouncy Bob</h1>
         <p class="description">Some visuals of the game.</p>
         <section class="grid">
