--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Bouncy Bob</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<header style="background-color:rgb(146, 191, 189);">
+<header class="headerStyle">
   <h1 class="title">Bouncy Bob!</h1>
 </header>
-<nav style="background-color:rgb(146, 191, 189);">
+<nav class="headerStyle">
   
   <a href="index.html" class="cardNav">
     Home Page
