--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <h1 class="title">Bouncy Bob!</h1>
 </header>
 <nav class="headerStyle">
-  
   <a href="index.html" class="cardNav">
     Home Page
   </a>
   <a href="pitch.html" class="cardNav">
     Pitch Doc
+  </a>
+  <a href="credits.html" class="cardNav">
+    Credits
   </a>
   <p></p>
   <hr>
@@ -76,6 +78,7 @@
 
 </body>
 <footer>
+  <hr>
   <p>
     Made by Luna Chavez.
   </p>
