--- a/pitch.html
+++ b/pitch.html
@@ -18,9 +18,13 @@
   <a href="pitch.html" class="cardNav">
     Pitch Doc
   </a>
+  <a href="credits.html" class="cardNav">
+    Credits
+  </a>
   <p></p>
   <hr>
 </nav>
+
 
 <body>
   <main>
