--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Bouncy Bob</title>
+  <link rel="icon" type="image/x-icon" href="Slime.ico">
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <header class="headerStyle">
